DTSPB-4434 Fix IHT issues